--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@autodatadirect/service-date",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "jest",
     "build": "babel ./src -d ./dist",
