--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@autodatadirect/service-date",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/autodatadirect/service-date#readme",
   "peerDependencies": {
-    "date-fns": "2.22.1"
+    "date-fns": "^2.29.3"
   },
   "devDependencies": {
     "@babel/cli": "7.14.3",
